--- a/p3.html
+++ b/p3.html
@@ -12,7 +12,7 @@
 
     <p>The groub decides to make you their leaders, what would you do?</p>
     <div class="oc">
-    	<button  onclick="window.location.href = 'AA.html';">Accept the offer</button>
+    	<button  onclick="window.location.href = 'pathBA.html';">Accept the offer</button>
 
     	<button onclick="window.location.href = 'pathAB&BB.html';">Refuse the offer</button>
 	</div>
