--- a/AA.html
+++ b/AA.html
@@ -10,11 +10,17 @@
     <h1 class = "pepe"> The Lost </h1>
 
 
-    <p>you haave the decision to make the next choices , so what would you choose?</p>
+      <p>you have the decision to make the next choice, so hat would you choose?</p>
+      
     <div class="oc">
     	<button onclick="window.location.href = 'AAA.html';"> start working and collecting resources</button>
 
     	<button onclick="window.location.href = 'AAB.html';">Take a rest with your team and build a plan to work </button>
+
+    	 <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
+    
 	</div>
 </body>
 </html>
