--- a/AAA.html
+++ b/AAA.html
@@ -10,12 +10,20 @@
     <h1 class = "pepe"> The Lost </h1>
 
 
-    <p>A lot of your crew got tired and some of them died, you have only maneged to build a hut that only ifts 5 people
-    The crew is 5 men , 2 pregant women, a kid an old couple and you, what would you do?</p>
+       <p>a lot of you crew got tired and some of them died, you have only maneged to build a hut that only fits 5 people.
+       the crew is 5 men, 2 pregnant women, a kid, an old couple and you, what would you do?
+   	   </p>
+
     <div class="oc">
-    	<button onclick="window.location.href = 'AAAA.html';"> let the man sleep inside the hut. </button>
+    	<button onclick="window.location.href = 'AAAA.html';"> let the five men sleep inside the hut. </button>
 
     	<button onclick="window.location.href = 'AAAB.html';">let the women and the kid sleep with the old couple. </button>
+
+    	 <div class = "meme">
+      <button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
+  
+
 	</div>
 </body>
 </html>
