--- a/AAAA.html
+++ b/AAAA.html
@@ -10,7 +10,13 @@
     <h1 class = "pepe"> The Lost </h1>
 
 
-    <p>you are a good leader ho wants the besst for this crew and thinks for thier sake and plane for the future.</p>
+     <p>you are a good leader who wants the best his crew and thinks for their sake and plans for thhe future</p>
+       <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
+    
+    </div>
+
     
 </body>
 </html>
