--- a/AAAB.html
+++ b/AAAB.html
@@ -11,6 +11,9 @@
 
 
     <p>you  are a great and a kind leader who works hard to keep the weak safe and treats people in a great way.</p>
+     <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
    
 </body>
 </html>
