--- a/AAB.html
+++ b/AAB.html
@@ -11,7 +11,15 @@
 
 
     <p>you planed and organized what to do and you managed to rest well and that led you to finish setting up your camp 
-    you survived for a week in the island without losing anyone of the crew,the crash searhers team found you, you are a great leader who thinks of wvery detail and plans for 2 moves ahead.</p>
+    you survived for a week in the island without losing anyone of the crew,the crash search team found you, you are a great leader who thinks of every detail and plans for 2 moves ahead.</p>
+     <div class="oc">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
+    
+     <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
+
    
 </body>
 </html>
