--- a/p2.html
+++ b/p2.html
@@ -10,11 +10,17 @@
     <h1 class = "pepe"> The Lost </h1>
 
 
-    <p>The groub decides to make you their leaders, what would you do?</p>
+    <p>The group decides to make you their leader, what would you do?</p>
     <div class="oc">
     	<button  onclick="window.location.href = 'AA.html';">Accept the offer</button>
 
     	<button onclick="window.location.href = 'pathAB&BB.html';">Refuse the offer</button>
+
+    <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
+    	
+
 	</div>
 </body>
 </html>
