--- a/pathAB&BB.html
+++ b/pathAB&BB.html
@@ -10,11 +10,14 @@
     <h1 class = "pepe"> The Lost </h1>
 
 
-    <p>you found a boat that can fit for two people, what would you do</p>
+    <p>you found a boat that can fit for two people, what would you do?</p>
     <div class="oc">
     	<button onclick="window.location.href = 'pathABA.html';"> Runaway alone. </button>
 
     	<button onclick="window.location.href = 'pathABB.html';">Runaway with a person. </button>
 	</div>
+	 <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
 </body>
 </html>
