--- a/pathAB.html
+++ b/pathAB.html
@@ -15,6 +15,10 @@
     	<button onclick="window.location.href = 'pathABA.html';"> Runaway alone. </button>
 
     	<button onclick="window.location.href = 'pathABB.html';">Runaway with a person. </button>
+    	 <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
+    
 	</div>
 </body>
 </html>
