--- a/pathABA.html
+++ b/pathABA.html
@@ -10,7 +10,9 @@
     <h1 class = "pepe"> The Lost </h1>
 
 
-    <p>you are a selfish person who only thinks about himself and your own sake,you have been lost is te sea and died.</p>
-  
+    <p>you are a selfish person who only thinks about himself and your own sake,you have been lost in the sea and died.</p>
+   <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
 </body>
 </html>
