--- a/pathABB.html
+++ b/pathABB.html
@@ -15,6 +15,10 @@
     	<button onclick="window.location.href = 'pathABBA.html';"> kill the person you brought with you. </button>
 
     	<button onclick="window.location.href = 'pathABBB.html';">split the food with him. </button>
+    	 <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
+    
 	</div>
 </body>
 </html>
