--- a/pathABBA.html
+++ b/pathABBA.html
@@ -10,9 +10,12 @@
     <h1 class = "pepe"> The Lost </h1>
 
 
-    <p>you have managed to get to the shore and you tol the police what you did and what happened,they brought back the lost and you went to jail for killing the person you brought with you.
+    <p>you have managed to get to the shore and you told the police what you did and what happened,they brought back the lost and you went to jail for killing the person you brought with you.
 
     you did a good job but you should have thought more about the persons life.</p>
+     <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
    
 </body>
 </html>
