--- a/pathABBB.html
+++ b/pathABBB.html
@@ -10,9 +10,12 @@
     <h1 class = "pepe"> The Lost </h1>
 
 
-    <p>you arrived at the shore and went to the nearest police station and reported what happened, ther sent rescue teams to the island and brought back the lost.
+    <p>you arrived at the shore and went to the nearest police station and reported what happened, they sent rescue teams to the island and brought back the lost.
 
-    Even thought you escaped, you could have never mentioned the lost, but you did and risked you own life to go on this journey and save them, great job.</p>
+    Even though you escaped, you could have never mentioned the lost, but you did and risked you own life to go on this journey and save them, great job.</p>
+     <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
     
 </body>
 </html>
