--- a/pathBA.html
+++ b/pathBA.html
@@ -12,9 +12,12 @@
 
     <p>you, have the decision to make the next choice, so what would you do?</p>
     <div class="oc">
-    	<button  onclick="window.location.href = 'pathBAA.html';">Take a rest wit your crew and buil a plan to work.</button>
+    	<button  onclick="window.location.href = 'pathBAA.html';">Take a rest with your crew and build a plan to work.</button>
 
-    	<button onclick="window.location.href = 'pathBAB.html';">Start working and collecting resources ti build a ship.</button>
+    	<button onclick="window.location.href = 'pathBAB.html';">Start working and collecting resources to build a ship.</button>
 	</div>
+	 <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
 </body>
 </html>
