--- a/pathBAA.html
+++ b/pathBAA.html
@@ -11,6 +11,9 @@
 
 
     <p>you are a great leader and a hero who saved the lost people and acted wisely, great job.</p>
+     <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
   
 </body>
 </html>
