--- a/pathBAB.html
+++ b/pathBAB.html
@@ -16,5 +16,8 @@
 
     	<button onclick="window.location.href = 'pathBABB.html';">Take the kid, an old couple and two pregnant women.</button>
 	</div>
+	 <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
 </body>
 </html>
