--- a/pathBABA.html
+++ b/pathBABA.html
@@ -10,8 +10,11 @@
     <h1 class = "pepe"> The Lost </h1>
 
 
-    <p>you and the men arruied and contacted the police and they brought saved the rest of the  people.
+    <p>you and the men arrived and contacted the police and they saved the rest of the  people.
     you are a great leader and a hero who saved the lost people and acted wisely, great job.  </p>
+     <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
    
 </body>
 </html>
