--- a/pathBABB.html
+++ b/pathBABB.html
@@ -10,8 +10,12 @@
     <h1 class = "pepe"> The Lost </h1>
 
 
-    <p>you managed to reach th shore, but the old mans wife died of sea sickness, you told the police and they bring back everyone.
-    you are a very kind and great person you took care of the weak people and tried your best to get everybody back, good job.</p>
+    <p>you managed to reach the shore, but the old man's wife died because of sea sickness, you told the police and they brought back everyone.
+    you are a very kind and a great person you took care of the weak people and tried your best to get everybody back, good job.</p>
+     <div class = "meme">
+    	<button onclick="window.location.href = 'project.html';"> reset the game?? </button>
+    </div>
+    
  
 </body>
 </html>
