--- a/project.html
+++ b/project.html
@@ -9,12 +9,12 @@
 
     <h1 class = "pepe"> The Lost </h1>
 
-
-    <p>you were on a plane that crashed, all the passengers survived, you found yourself on an island , the passengers splat,into tow groups with different opinions, and your choice is the game changer , so what would you choose</p>
+    <div class="po"> <p>you were on a plane that crashed, all the passengers survived, you found yourself on an island, the passengers splat, into two groups with different opinions, and your choice is the game changer, so what would you choose?</p></div>
+    
     <div class="oc">
-    	<button onclick="window.location.href = 'p2.html';"> stay on the island </button>
+    	<button onclick="window.location.href = 'p2.html';"> stay on the island. </button>
 
-    	<button onclick="window.location.href = 'p3.html';">work together to build a ship and try to get back home </button>
+    	<button onclick="window.location.href = 'p3.html';">work together to build a ship and try to get back home. </button>
 	</div>
 </body>
 </html>
